--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -1,5 +1,12 @@
 .footer {
+  display: flex;
+  justify-content: center;
+  margin-top: 92px;
+  align-items: center;
 }
 
 .footer__copyright {
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 16px;
 }
