--- a/blocks/header.css
+++ b/blocks/header.css
@@ -1,24 +1,26 @@
 .header {
-  padding: 34px 0 0;
   display: flex;
   justify-content: center;
-  margin: 0 auto;
 }
 
 .header__logo {
+  margin: 34px auto 0;
   width: 254px;
   height: 70px;
 }
 
-.logo__icon {
-  width: 32px;
-  height: 32px;
-  margin: 0 auto 22.26px;
-  display: flex;
-  align-items: center;
+@media (max-width 1024px) {
+  .header__logo {
+    margin: 30px auto 0;
+    width: 254px;
+    height: 66px;
+  }
 }
 
-.logo__name {
-  width: 254px;
-  height: 15px;
+@media (max-width 544px) {
+  .header__logo {
+    margin: 20px auto 0;
+    width: 188px;
+    height: 52px;
+  }
 }
