--- a/blocks/intro.css
+++ b/blocks/intro.css
@@ -1,14 +1,94 @@
 .intro {
+  width: 830px;
+  height: 482px;
+  margin: 0 154px 0 148px;
 }
 
 .intro__title {
+  font-size: 54px;
+  font-weight: 900;
+  line-height: 58px;
+  width: 100%;
 }
 
 .intro__quote {
+  width: 738px;
+  height: 68px;
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 34px;
+  margin: 40px 400px 0 0;
 }
 
 .intro__author {
+  max-width: 738px;
+  height: 34px;
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 34px;
+  text-align: right;
+  margin-top: 10px;
 }
 
 .intro__text {
+  width: 722px;
+  height: 182px;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 163%;
+}
+
+@media (max-width 1024px) {
+  .intro {
+    width: 720px;
+    height: 490px;
+    margin: 0 24px 0;
+  }
+
+  .intro__title {
+    font-size: 45px;
+    line-height: 49px;
+  }
+
+  .intro__quote {
+    width: 720px;
+    height: 102px;
+    margin: 50px 24px 0;
+  }
+
+  .intro__author {
+    max-width: 738px;
+    height: 34px;
+    margin-top: 0 24px 0;
+  }
+}
+
+@media (max-width 544px) {
+  .intro {
+    width: 288px;
+    height: 878px;
+    margin: 64px 16px 0;
+  }
+
+  .intro__title {
+    font-size: 32px;
+    line-height: 35px;
+  }
+
+  .intro__quote {
+    width: 288px;
+    height: 68px;
+    line-height: 30px;
+    margin: 40px 16px 0 0;
+  }
+
+  .intro__author {
+    max-width: 288px;
+    margin: 0 16px 0;
+  }
+
+  .intro__text {
+    width: 288px;
+    height: 442px;
+  }
 }
