--- a/blocks/lead.css
+++ b/blocks/lead.css
@@ -1,12 +1,64 @@
 .lead {
-  font-family: "Inter", sans-serif;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
 }
 
 .lead__title {
+  font-size: 96px;
+  font-weight: 900;
+  line-height: 1;
+  margin: 90px auto 0;
+  width: 793px;
 }
 
 .lead__subtitle {
+  margin: 32px auto 0;
+  font-size: 30px;
+  font-weight: 400;
+  line-height: 36px;
+  width: 720px;
 }
 
 .lead__image {
+  width: 984px;
+  height: 615px;
+  margin: 64px auto 0;
+  object-fit: cover;
+}
+
+@media (max-width 1024px) {
+  .lead__title {
+    font-size: 75px;
+    line-height: 79px;
+    width: 720px;
+  }
+
+  .lead__subtitle {
+    margin: 25px auto 0;
+  }
+}
+
+@media (max-width 544px) {
+  .lead__title {
+    font-size: 40px;
+    font-weight: 900;
+    line-height: 44px;
+    margin: 50px auto 0;
+    width: 288px;
+  }
+
+  .lead__subtitle {
+    margin: 16px auto 0;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 20px;
+    width: 288px;
+  }
+
+  .lead__image {
+    margin: 40px auto 0;
+  }
 }
