--- a/blocks/page.css
+++ b/blocks/page.css
@@ -1,13 +1,10 @@
 .page {
+  min-width: 320px;
+  max-width: 1280px;
+  width: auto;
+  margin: 0 auto;
+  font-family: "Inter", sans-serif;
   background-color: #2a2c2f;
   color: #fff;
-}
-
-@media screen and (max-width: 1280px) {
-}
-
-@media screen and (max-width: 768px) {
-}
-
-@media screen and (max-width: 320px) {
+  overflow-x: hidden;
 }
