--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -1,7 +1,6 @@
 .footer {
   display: flex;
   justify-content: center;
-  margin-top: 92px;
   align-items: center;
 }
 
@@ -9,4 +8,6 @@
   font-size: 14px;
   font-weight: 400;
   line-height: 16px;
+  margin-top: 92px;
+  margin-bottom: 24px;
 }
