--- a/blocks/intro.css
+++ b/blocks/intro.css
@@ -1,5 +1,5 @@
 .intro {
-  width: 830px;
+  max-width: 830px;
   height: 482px;
   margin: 0 154px 0 148px;
 }
@@ -12,8 +12,8 @@
 }
 
 .intro__quote {
-  width: 738px;
-  height: 68px;
+  max-width: 738px;
+  width: 100%;
   font-size: 24px;
   font-weight: 400;
   line-height: 34px;
@@ -31,42 +31,34 @@
 }
 
 .intro__text {
-  width: 722px;
+  max-width: 722px;
   height: 182px;
   font-size: 16px;
   font-weight: 400;
-  line-height: 163%;
+  margin-bottom: 92px;
 }
 
 @media (max-width 1024px) {
   .intro {
-    width: 720px;
-    height: 490px;
-    margin: 0 24px 0;
+    max-width: 720px;
+    margin: 90px 24px 0;
   }
 
   .intro__title {
     font-size: 45px;
     line-height: 49px;
+    max-width: 707px;
+    margin: 0 37px 0 34px;
   }
 
   .intro__quote {
-    width: 720px;
-    height: 102px;
     margin: 50px 24px 0;
-  }
-
-  .intro__author {
-    max-width: 738px;
-    height: 34px;
-    margin-top: 0 24px 0;
   }
 }
 
 @media (max-width 544px) {
   .intro {
-    width: 288px;
-    height: 878px;
+    max-width: 288px;
     margin: 64px 16px 0;
   }
 
@@ -76,19 +68,6 @@
   }
 
   .intro__quote {
-    width: 288px;
-    height: 68px;
     line-height: 30px;
-    margin: 40px 16px 0 0;
-  }
-
-  .intro__author {
-    max-width: 288px;
-    margin: 0 16px 0;
-  }
-
-  .intro__text {
-    width: 288px;
-    height: 442px;
   }
 }
