--- a/blocks/lead.css
+++ b/blocks/lead.css
@@ -11,7 +11,8 @@
   font-weight: 900;
   line-height: 1;
   margin: 90px auto 0;
-  width: 793px;
+  max-width: 793px;
+  width: 100%;
 }
 
 .lead__subtitle {
@@ -19,12 +20,13 @@
   font-size: 30px;
   font-weight: 400;
   line-height: 36px;
-  width: 720px;
+  max-width: 720px;
+  width: 100%;
 }
 
 .lead__image {
-  width: 984px;
-  height: 615px;
+  max-width: 984px;
+  width: 100%;
   margin: 64px auto 0;
   object-fit: cover;
 }
@@ -33,7 +35,7 @@
   .lead__title {
     font-size: 75px;
     line-height: 79px;
-    width: 720px;
+    max-width: 720px;
   }
 
   .lead__subtitle {
@@ -44,18 +46,16 @@
 @media (max-width 544px) {
   .lead__title {
     font-size: 40px;
-    font-weight: 900;
     line-height: 44px;
     margin: 50px auto 0;
-    width: 288px;
+    max-width: 288px;
   }
 
   .lead__subtitle {
     margin: 16px auto 0;
     font-size: 16px;
-    font-weight: 400;
     line-height: 20px;
-    width: 288px;
+    max-width: 288px;
   }
 
   .lead__image {
