--- a/blocks/intro.css
+++ b/blocks/intro.css
@@ -38,7 +38,7 @@
   margin-bottom: 92px;
 }
 
-@media (max-width 1024px) {
+@media (max-width: 1024px) {
   .intro {
     max-width: 720px;
     margin: 90px 24px 0;
@@ -49,14 +49,16 @@
     line-height: 49px;
     max-width: 707px;
     margin: 0 37px 0 34px;
+    margin-left: 0;
   }
 
   .intro__quote {
     margin: 50px 24px 0;
+    margin-left: 0;
   }
 }
 
-@media (max-width 544px) {
+@media (max-width: 544px) {
   .intro {
     max-width: 288px;
     margin: 64px 16px 0;
@@ -65,9 +67,11 @@
   .intro__title {
     font-size: 32px;
     line-height: 35px;
+    margin-left: 0;
   }
 
   .intro__quote {
     line-height: 30px;
+    margin-left: 0;
   }
 }
