--- a/blocks/lead.css
+++ b/blocks/lead.css
@@ -31,7 +31,7 @@
   object-fit: cover;
 }
 
-@media (max-width 1024px) {
+@media (max-width: 1024px) {
   .lead__title {
     font-size: 75px;
     line-height: 79px;
@@ -43,7 +43,7 @@
   }
 }
 
-@media (max-width 544px) {
+@media (max-width: 544px) {
   .lead__title {
     font-size: 40px;
     line-height: 44px;
