--- a/blocks/lead.css
+++ b/blocks/lead.css
@@ -47,12 +47,12 @@
   .lead__title {
     font-size: 40px;
     line-height: 44px;
-    margin: 50px auto 0;
+    margin: 50px 16px 0;
     max-width: 288px;
   }
 
   .lead__subtitle {
-    margin: 16px auto 0;
+    margin-top: 16px;
     font-size: 16px;
     line-height: 20px;
     max-width: 288px;
