--- a/blocks/page.css
+++ b/blocks/page.css
@@ -1,7 +1,5 @@
 .page {
-  min-width: 320px;
-  max-width: 1280px;
-  width: auto;
+  min-height: 100vh;
   margin: 0 auto;
   font-family: "Inter", sans-serif;
   background-color: #2a2c2f;
