--- a/blocks/lead.css
+++ b/blocks/lead.css
@@ -64,3 +64,24 @@
     margin: 40px auto 0;
   }
 }
+
+@media (max-width: 544px) {
+  .lead__title {
+    font-size: 40px;
+    line-height: 44px;
+    margin: 50px 16px 0;
+    max-width: 288px;
+    width: 100%;
+  }
+
+  .lead__subtitle {
+    margin-top: 16px;
+    font-size: 16px;
+    line-height: 20px;
+    max-width: 288px;
+  }
+
+  .lead__image {
+    margin: 40px auto 0;
+  }
+}
