--- a/blocks/page.css
+++ b/blocks/page.css
@@ -1,8 +1,11 @@
 .page {
-  min-height: 100vh;
+  max-width: 1280px;
+  min-width: 320px;
   margin: 0 auto;
+  width: 100%;
   font-family: "Inter", sans-serif;
   background-color: #2a2c2f;
   color: #fff;
   overflow-x: hidden;
+  box-sizing: border-box;
 }
