--- a/pages/index.css
+++ b/pages/index.css
@@ -6,7 +6,7 @@
 
 @import url(../blocks/header.css);
 
-@import url(../blocks/content.css);
+@import url(../blocks/body.css);
 
 @import url(../blocks/lead.css);
 
