--- a/blocks/places.css
+++ b/blocks/places.css
@@ -157,6 +157,10 @@
     margin: 0 16px;
   }
 
+  .places__text {
+    margin: 0 16px;
+  }
+
   .places__paragraph {
     max-width: 288px;
     font-size: 16px;
