--- a/blocks/places.css
+++ b/blocks/places.css
@@ -41,7 +41,7 @@
   grid-area: button;
   width: 355px;
   height: 48px;
-  background: linear-gradient(to right, #0278fe 0%, #003a7b 100%);
+  background: linear-gradient(to right, #0278fe, #003a7b);
   box-shadow: 10px 10px 25px 0px #000000;
   border-radius: 4px;
   text-align: center;
@@ -111,6 +111,10 @@
     height: 340px;
   }
 
+  .places__button {
+    box-shadow: none;
+  }
+
   .places__paragraph {
     max-width: 352px;
     font-size: 16px;
@@ -147,6 +151,11 @@
   .places__image {
     width: 320px;
     height: 320px;
+    box-shadow: none;
+  }
+
+  .places__button {
+    box-shadow: none;
   }
 
   .places__button {
