--- a/blocks/places.css
+++ b/blocks/places.css
@@ -41,7 +41,7 @@
   grid-area: button;
   width: 355px;
   height: 48px;
-  background: linear-gradient(90deg, #0278fe 0%, #003a7b 99.98%);
+  background: linear-gradient(to right, #0278fe 0%, #003a7b 100%);
   box-shadow: 10px 10px 25px 0px #000000;
   border-radius: 4px;
   text-align: center;
@@ -109,7 +109,6 @@
   .places__image {
     width: 340px;
     height: 340px;
-    box-shadow: none;
   }
 
   .places__button {
@@ -152,7 +151,6 @@
   .places__image {
     width: 320px;
     height: 320px;
-    box-shadow: none;
   }
 
   .places__button {
