--- a/blocks/places.css
+++ b/blocks/places.css
@@ -41,7 +41,7 @@
   grid-area: button;
   width: 355px;
   height: 48px;
-  background: linear-gradient(to right, #0278fe 0%, #003a7b 100%);
+  background: linear-gradient(90deg, #0278fe 0%, #003a7b 99.98%);
   box-shadow: 10px 10px 25px 0px #000000;
   border-radius: 4px;
   text-align: center;
@@ -54,7 +54,7 @@
   background: linear-gradient(
     90deg,
     rgba(2, 120, 254, 0.25) 0%,
-    rgba(0, 58, 123, 0.25) 100%
+    rgba(0, 58, 123, 0.25) 99.98%
   );
 }
 
@@ -111,10 +111,6 @@
     height: 340px;
   }
 
-  .places__button {
-    box-shadow: none;
-  }
-
   .places__paragraph {
     max-width: 352px;
     font-size: 16px;
@@ -151,10 +147,6 @@
   .places__image {
     width: 320px;
     height: 320px;
-  }
-
-  .places__button {
-    box-shadow: none;
   }
 
   .places__button {
